# sycl-benchmarks

./: README.md
cpu/: CMakeLists.txt
cpu/src/: CMakeLists.txt  app.cpp
dep/include/: cuda_kernels.hpp  grid.hpp  matrix_block.hpp
dep/src/: CMakeLists.txt  cuda_kernels.cu  cuda_kernels.ipp  grid.cpp  grid.ipp  matrix_block.cpp  matrix_block.ipp  nn_blocks.ipp
dep_cuda/include/: cuda_kernels.hpp  grid.hpp  nn_blocks.hpp
dep_cuda/src/: block.ipp
dep_sycl/dep_cuda/include/: block.hpp
dep_sycl/dep_cuda/src/: CMakeLists.txt  Makefile  block.cu  cuda_kernels.cu  cuda_kernels.ipp  grid.cpp  grid.ipp  nn_blocks.cpp
dep_sycl/include/: block.hpp  cuda_kernels.hpp  grid.hpp
dep_sycl/src/: CMakeLists.txt  block.cpp  block.ipp  cuda_kernels.cpp  cuda_kernels.ipp  grid.cpp  grid.ipp
gpu/src/: CMakeLists.txt  app.cu  grid.cu
kida/: CMakeLists.txt
kida/include/: simulate.hpp
kida/src/: CMakeLists.txt  app.cpp  simulate.cpp  simulate.ipp
lbm/include/: D3Q27SC.hpp  collide_sycl.hpp  lb_model.hpp  lb_param_host.hpp
lbm/src/: CMakeLists.txt  D3Q27SC.cpp  collide_sycl.cpp  collide_sycl.ipp  lb_model.cpp  lb_model.ipp  lb_param_host.cpp  lb_param_host.ipp
openacc/: CMakeLists.txt
openacc/src/: app.cpp
sycl/: CMakeLists.txt
sycl/src/: CMakeLists.txt  app.cpp
